--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -125,12 +125,13 @@ input:not([type=submit]):not([type=file]):active, input:not([type=submit]):not([
 	left:13px;
 	z-index:200;
 	display:block;
-	padding:9px 12px 6px;
+	opacity: 0.5;
+	padding:5px 5px 2px;
 	/*background:#29292a;*/
 	color:#fff;
 	@include transition(background 0.6s ease-out);
 	&:hover{
-		background:#3287c1;
+		opacity: 1;
 	}
 	img {
 		&.mark {
